# freertos_generic

./: CMakeLists.txt  readme.md
.github/workflows/: ci.yml  codeql-analysis.yml
app/: freertos_generic_v3_10.xml
components/lists/: component_lists_LPC55S69_cm33_core0.cmake  component_lists_LPC55S69_cm33_core1.cmake
components/serial_manager/: component_serial_manager_LPC55S69_cm33_core0.cmake  component_serial_manager_LPC55S69_cm33_core1.cmake  component_serial_manager_swo_LPC55S69_cm33_core0.cmake  component_serial_manager_uart_LPC55S69_cm33_core0.cmake  component_serial_manager_uart_LPC55S69_cm33_core1.cmake
components/uart/: component_usart_adapter_LPC55S69_cm33_core0.cmake  component_usart_adapter_LPC55S69_cm33_core1.cmake
device/LPC55S69/: device_LPC55S69_CMSIS_LPC55S69_cm33_core0.cmake  device_LPC55S69_CMSIS_LPC55S69_cm33_core1.cmake  device_LPC55S69_startup_LPC55S69_cm33_core0.cmake  device_LPC55S69_startup_LPC55S69_cm33_core1.cmake  device_LPC55S69_system_LPC55S69_cm33_core0.cmake  device_LPC55S69_system_LPC55S69_cm33_core1.cmake
device/LPC55S69/drivers/: driver_anactrl_LPC55S69_cm33_core0.cmake  driver_casper_LPC55S69_cm33_core0.cmake  driver_clock_LPC55S69_cm33_core0.cmake  driver_clock_LPC55S69_cm33_core1.cmake  driver_cmp_1_LPC55S69_cm33_core0.cmake  driver_common_LPC55S69_cm33_core0.cmake  driver_common_LPC55S69_cm33_core1.cmake  driver_ctimer_LPC55S69_cm33_core0.cmake  driver_flexcomm_LPC55S69_cm33_core0.cmake  driver_flexcomm_LPC55S69_cm33_core1.cmake  driver_flexcomm_i2c_LPC55S69_cm33_core0.cmake  driver_flexcomm_i2c_dma_LPC55S69_cm33_core0.cmake  driver_flexcomm_i2c_freertos_LPC55S69_cm33_core0.cmake  driver_flexcomm_i2s_LPC55S69_cm33_core0.cmake  driver_flexcomm_i2s_dma_LPC55S69_cm33_core0.cmake  driver_flexcomm_spi_LPC55S69_cm33_core0.cmake  driver_flexcomm_spi_dma_LPC55S69_cm33_core0.cmake  driver_flexcomm_spi_freertos_LPC55S69_cm33_core0.cmake  driver_flexcomm_usart_LPC55S69_cm33_core0.cmake  driver_flexcomm_usart_LPC55S69_cm33_core1.cmake  driver_flexcomm_usart_dma_LPC55S69_cm33_core0.cmake  driver_flexcomm_usart_freertos_LPC55S69_cm33_core0.cmake  driver_gint_LPC55S69_cm33_core0.cmake  driver_hashcrypt_LPC55S69_cm33_core0.cmake  driver_iap1_LPC55S69_cm33_core0.cmake  driver_inputmux_LPC55S69_cm33_core0.cmake  driver_inputmux_LPC55S69_cm33_core1.cmake  driver_inputmux_connections_LPC55S69_cm33_core0.cmake  driver_inputmux_connections_LPC55S69_cm33_core1.cmake  driver_lpadc_LPC55S69_cm33_core0.cmake  driver_lpc_crc_LPC55S69_cm33_core0.cmake  driver_lpc_dma_LPC55S69_cm33_core0.cmake  driver_lpc_gpio_LPC55S69_cm33_core0.cmake  driver_lpc_gpio_LPC55S69_cm33_core1.cmake  driver_lpc_iocon_LPC55S69_cm33_core0.cmake  driver_lpc_iocon_LPC55S69_cm33_core1.cmake  driver_lpc_rtc_LPC55S69_cm33_core0.cmake  driver_mailbox_LPC55S69_cm33_core0.cmake  driver_mailbox_LPC55S69_cm33_core1.cmake  driver_mrt_LPC55S69_cm33_core0.cmake  (+16 more)
rtos/freertos/freertos_kernel/: middleware_freertos-kernel_LPC55S69_cm33_core0.cmake  middleware_freertos-kernel_LPC55S69_cm33_core1.cmake  middleware_freertos-kernel_cm33_nonsecure_port_LPC55S69_cm33_core0.cmake  middleware_freertos-kernel_cm33_nonsecure_port_LPC55S69_cm33_core1.cmake  middleware_freertos-kernel_cm33_secure_port_LPC55S69_cm33_core0.cmake  middleware_freertos-kernel_heap_4_LPC55S69_cm33_core0.cmake  middleware_freertos-kernel_heap_4_LPC55S69_cm33_core1.cmake  middleware_freertos-kernel_mpu_wrappers_LPC55S69_cm33_core0.cmake
